Refactor server and Docker setup to use 'voidrun' terminology; add version endpoint
