# internal/handler/version.go
@@ -1,0 +1,19 @@
+package handler
+
+import (
+	"net/http"
+
+	"voidrun/internal/version"
+
+	"github.com/gin-gonic/gin"
+)
+
+type VersionHandler struct {}
+
+func NewVersionHandler() *VersionHandler {
+	return &VersionHandler{}
+}
+
+func (h *VersionHandler) Get(c *gin.Context) {
+	c.JSON(http.StatusOK, version.Get())
+}
